- New files:   1. DBforPostgreSQL.Json   2. DBforPostgreSQL.ps1
- Updated ControlSettings.json : Added configuration for DBforPostgreSQL
- Updated SVTMapping.ps1: Added DBforPostgreSQL(Single Server) mapping

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -13,6 +13,9 @@
     "AuditRetentionPeriod_Min": 365,
     "AuditRetentionPeriod_Forever": 0
   },
+  "DBforPostgreSQL": {
+    "LogRetentionPeriod_Min": 3
+  },
   "AnalysisService": {
     "Max_Admin_Count": 2
   },
