--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -14,7 +14,8 @@
     "AuditRetentionPeriod_Forever": 0
   },
   "DBforPostgreSQL": {
-    "LogRetentionPeriod_Min": 3
+    "LogRetentionPeriod_Min": 3,
+    "AllowAllWindowsAzureIps" : "0.0.0.0-0.0.0.0"
   },
   "AnalysisService": {
     "Max_Admin_Count": 2
