added linux tag in Check FunctionsApp HttpCertificateSSL control

--- a/src/AzSK/Framework/Configurations/SVT/Services/AppService.json
+++ b/src/AzSK/Framework/Configurations/SVT/Services/AppService.json
@@ -609,7 +609,8 @@
           "DP",
           "OwnerAccess",
           "FunctionApp",
-          "Windows"
+          "Windows",
+          "Linux"
         ],
        "Enabled": true
       },
