Bug fix storage control Azure_Storage_Audit_Issue_Alert_AuthN_Req

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -225,6 +225,8 @@
               "OperatorProperty" : "Include",
               "Values" : "Anonymous"
             },
+            "WindowSize": "01:00:00",
+            "Frequency": "01:00:00",
             "IsEnabled": true
         }
       }
