--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -23,7 +23,7 @@
     "Tenant_Domain": "microsoft.com"
   },
   "KubernetesService": {
-    "kubernetesVersion": "1.14.6"
+    "kubernetesVersion": ["1.13.10", "1.14.6"]
   },
   "APIManagement": {
     "AllowedIdentityProvider": [
