Implemented review comments

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -19,7 +19,7 @@
   "ERvNet": {
     "ResourceLockLevel": "ReadOnly",
     "WhiteListedRGs" : ["ERNetwork-LAB"],
-    "WhiteListedRemoteVirtualNetworkId" : "/subscriptions/45a7f642-6aac-4fc2-914b-0b2eeb1c7974/*",
+    "WhiteListedRemoteVirtualNetworkId" : "",
     "WhiteListedaddressPrefix" : "0.0.0.0/0",
     "WhiteListednextHopType": "VirtualAppliance"
   },
