--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -400,7 +400,13 @@
   },
   "SubscriptionCore": {
     "EnableV1AlertFailure": false,
-    "ASCTier": "Standard",
+    "ASCTier": ["Standard"],
+    "ResourceTypeASCTier":{
+      "VirtualMachines" : ["Standard"],
+      "SqlServers" : ["Standard"],
+      "AppServices" : ["Standard"],
+      "StorageAccounts" : ["Standard"]
+    },
     "credHighTH": 7,
     "credModerateTH": 30,
     "NonADIdentitiesPatterns" : ["(.)*#ext#@(.)*.onmicrosoft.com"],
