Moved image path and required tag to controlsettings

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -446,5 +446,11 @@
   "MandatoryTags":[
 
   ],
-  "WhitelistedResourceGroups": []
+  "WhitelistedResourceGroups": [],
+  "InClusterCA": {
+    "AKS":{
+      "RequiredImagePath": "azsktest/akstest",
+      "RequiredImageTag": "latest"
+    }
+  }
 }
