Changed tag name

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -179,7 +179,7 @@
     "ExcludeControlsForServices" : 
       [
         {
-          "FilterTag" : "ExcludeForServiceFabric",
+          "FilterTag" : "ExcludeServiceFabric",
           "ResourceTag": "resourceType",
           "ResourceTagValue" :"Service Fabric",
           "ServiceType" : "ServiceFabric"
