--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -187,7 +187,7 @@
         {
           "FilterTag" : "ExcludeKubernetes",
           "ResourceTag": "Orchestrator",
-          "ResourceTagValue" :"Kubernetes",
+          "ResourceTagValue" :"Kubernetes*",
           "ServiceType" : "Kubernetes"
         }
      ]
