Added VMSS control exclusion for AKS and SF

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -176,16 +176,16 @@
         }
       ]
     },
-    "ExcludeControlsForServices" : 
+    "ControlExclusionsByService" : 
       [
         {
-          "FilterTag" : "ExcludeServiceFabric",
+          "ControlTag" : "ExcludeServiceFabric",
           "ResourceTag": "resourceType",
           "ResourceTagValue" :"Service Fabric",
           "ServiceType" : "ServiceFabric"
         },
         {
-          "FilterTag" : "ExcludeKubernetes",
+          "ControlTag" : "ExcludeKubernetes",
           "ResourceTag": "Orchestrator",
           "ResourceTagValue" :"Kubernetes*",
           "ServiceType" : "Kubernetes"
