--- a/src/AzSK/Framework/Configurations/SVT/Services/AppService.json
+++ b/src/AzSK/Framework/Configurations/SVT/Services/AppService.json
@@ -618,7 +618,7 @@
         "ControlID": "Azure_AppService_DP_Use_Secured_TLS_Version",
         "Description": "Use approved version of TLS for the App Service",
         "Id": "AppService420",
-        "ControlSeverity": "Critical",
+        "ControlSeverity": "High",
         "Automated": "Yes",
         "MethodName": "CheckAppServiceTLSVersion",
         "Recommendation": "Go to Azure Portal --> your App Service --> Settings --> TLS/SSL --> Minimum TLS version --> set to org approved version (see detailed logs).",
