bug fix for activating assignments for roles that have CA enabled on them

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -166,6 +166,7 @@
   },
   "CheckPIMCAPolicyTags": false,
   "PIMCAPolicyTags":[],
+  "PIMAPPID":"",
   "ASCAlertsSeverityLevels": [ "High" ],
   "ASCAlertsThresholdInDays": 30,
   "WhitelistedMgmtCerts": {
