--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/AzureDevOps/AzureDevOps.Release.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/AzureDevOps/AzureDevOps.Release.json
@@ -125,6 +125,23 @@
       "SI"
     ],
     "Enabled": true
+  },
+  {
+    "ControlID": "AzureDevOps_Release_Review_Mixing_GitHub_And_ADO_Sources",
+    "Description": "Pipelines mixing GitHub and ADO sources in the same pipeline.",
+    "Id": "Release180",
+    "ControlSeverity": "Medium",
+    "Automated": "Yes",
+    "MethodName": "CheckMixingGitHubAndADOSources",
+    "Rationale": "Pipelines build code from untrusted external sources (e.g. GitHub) are Building GitHub repos and ADO sources in the same pipeline.",
+    "Recommendation": "Building GitHub repos and ADO sources in the same pipeline.",
+    "Tags": [
+      "SDL",
+      "TCP",
+      "Manual",
+      "SI"
+    ],
+    "Enabled": true
   }
   ]
 }
