--- a/src/AzSK.AzureDevOps/Framework/Configurations/SVT/AzureDevOps/AzureDevOps.Project.json
+++ b/src/AzSK.AzureDevOps/Framework/Configurations/SVT/AzureDevOps/AzureDevOps.Project.json
@@ -25,8 +25,8 @@
         "Description": "All teams/groups must be granted minimum required permissions on project",
         "Id": "Project120",
         "ControlSeverity": "High",
-        "Automated": "No",
-        "MethodName": "",
+        "Automated": "Yes",
+        "MethodName": "CheckRBACAccess",
         "Rationale": "Granting minimum access by leveraging RBAC feature ensures that users are granted just enough permissions to perform their tasks. This minimizes exposure of the resources in case of user/service account compromise.",
         "Recommendation": "Refer: https://docs.microsoft.com/en-us/azure/devops/organizations/security/set-project-collection-level-permissions?view=vsts&tabs=new-nav",
         "Tags": [
@@ -42,8 +42,8 @@
         "Description": "Justify all identities that are granted with member access on group and teams.",
         "Id": "Project130",
         "ControlSeverity": "High",
-        "Automated": "No",
-        "MethodName": "",
+        "Automated": "Yes",
+        "MethodName": "JustifyGroupMember",
         "Rationale": "Accounts that are a member of these groups without a legitimate business reason increase the risk for your Organization. By carefully reviewing and removing accounts that shouldn't be there in the first place, you can avoid attacks if those accounts are compromised.",
         "Recommendation": "Go to Project Settings --> Security --> Select Teams/Group --> Verify Members",
         "Tags": [
