minor changes for large sub

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -532,5 +532,6 @@
       "RequiredImagePath": "azsktest/akstest",
       "RequiredImageTag": "latest"
     }
-  }
+  },
+  "MaxResourceInventoryObjectsCount": 5000
 }
