--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -226,7 +226,11 @@
   "PIMCAPolicyTags":[],
   "PIMAppId":"01fc33a7-78ba-4d2f-a4b7-768e336e890e",
   "ASCAlertsSeverityLevels": [ "High" ],
-  "ASCAlertsThresholdInDays": 30,
+  "ASCAlertsThresholdInDays": {
+    "High": 0,
+    "Medium": 30  
+   
+  },
   "WhitelistedMgmtCerts": {
     "Thumbprints": [],
     "ApprovedValidityRangeInDays": 732
