--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -41,8 +41,7 @@
       "Microsoft.WindowsAzure.ApiManagement.Gateway.Security.Backend.Protocols.Tls11",
       "Microsoft.WindowsAzure.ApiManagement.Gateway.Security.Backend.Protocols.Ssl30",
       "Microsoft.WindowsAzure.ApiManagement.Gateway.Security.Ciphers.TripleDes168"
-    ],
-    "MaxAllowedAPICount": 30
+    ]
   },
   "VirtualMachine": {
     "Windows": {
@@ -226,7 +225,8 @@
   "CheckPIMCAPolicyTags": false,
   "PIMCAPolicyTags":[],
   "PIMAppId":"01fc33a7-78ba-4d2f-a4b7-768e336e890e",
-   "ASCAlertsThresholdInDays": {
+  "ASCAlertsSeverityLevels": [ "High" ],
+  "ASCAlertsThresholdInDays": {
     "High": 0,
     "Medium": 30  
    
@@ -537,5 +537,6 @@
       "RequiredImageTag": "latest"
     }
   },
-  "MaxResourceInventoryObjectsCount": 20000
+  "MaxResourceInventoryObjectsCount": 20000,
+  "AlernateAccountRegularExpressionForOrg": ""
 }
